<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/utsa_blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/utsa_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/app_title"
        android:textColor="@color/utsa_orange"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/first_divider"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/profile_icon"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/first_divider"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/utsa_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/workouts"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/utsa_blue"
        android:fontFamily="@font/graduate"
        android:text="@string/workouts"
        android:textColor="@color/utsa_orange"
        app:layout_constraintEnd_toStartOf="@+id/second_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_divider" />

    <View
        android:id="@+id/second_divider"
        android:layout_width="5dp"
        android:layout_height="25dp"
        android:background="@color/utsa_orange"
        app:layout_constraintTop_toBottomOf="@id/first_divider"
        tools:layout_editor_absoluteX="203dp" />

    <Button
        android:id="@+id/exercises"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@color/utsa_blue"
        android:fontFamily="@font/graduate"
        android:text="@string/exercises"
        android:textColor="@color/utsa_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/second_divider"
        app:layout_constraintTop_toBottomOf="@+id/first_divider" />

    <View
        android:id="@+id/third_divider"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/utsa_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_divider" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="317dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/third_divider"
        app:srcCompat="@drawable/workouts_placeholder" />

    <View
        android:id="@+id/fourth_divider"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/utsa_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/user_input_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/user_input_header"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_divider" />

    <Button
        android:id="@+id/add_workout"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:background="@color/utsa_blue"
        android:fontFamily="@font/graduate"
        android:text="@string/add_workout"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input_header" />

    <Button
        android:id="@+id/edit_workout"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:background="@color/utsa_blue"
        android:fontFamily="@font/graduate"
        android:text="@string/edit_workout"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/delete_workout"
        app:layout_constraintStart_toEndOf="@+id/add_workout"
        app:layout_constraintTop_toBottomOf="@+id/user_input_header" />

    <Button
        android:id="@+id/delete_workout"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:background="@color/utsa_blue"
        android:fontFamily="@font/graduate"
        android:text="@string/delete_workout"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_input_header" />

    <View
        android:id="@+id/fifth_divider"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/utsa_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_workout" />

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/graduate"
        android:text="@string/exercise_name"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_divider" />

    <EditText
        android:id="@+id/input_exercise_name"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/utsa_orange_transparent"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_divider" />

    <TextView
        android:id="@+id/rep_goal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/graduate"
        android:text="@string/rep_goal"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_name" />

    <EditText
        android:id="@+id/input_rep_goal"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/utsa_orange_transparent"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_exercise_name" />

    <TextView
        android:id="@+id/rep_actual"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/graduate"
        android:text="@string/rep_actual"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rep_goal" />

    <TextView
        android:id="@+id/weight_goal"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/graduate"
        android:text="@string/weight_goal"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rep_actual" />

    <TextView
        android:id="@+id/weight_actual"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/graduate"
        android:text="@string/weight_actual"
        android:textColor="@color/utsa_orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_goal" />

    <EditText
        android:id="@+id/input_rep_actual"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/utsa_orange_transparent"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_rep_goal" />

    <EditText
        android:id="@+id/input_weight_goal"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/utsa_orange_transparent"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_rep_actual" />

    <EditText
        android:id="@+id/input_weight_actual"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/utsa_orange_transparent"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_weight_goal" />

</androidx.constraintlayout.widget.ConstraintLayout>